--- a/webapi/.env
+++ b/webapi/.env
@@ -1,3 +1,3 @@
 
-CONNECTION=Data Source=DESKTOP-AOK8US6\SQLEXPRESS;Initial Catalog=POS_CAFE;Integrated Security=False;User ID=sa;Password=123;MultipleActiveResultSets=True
+CONNECTION=Data Source=NUCH\SQLEXPRESS;Initial Catalog=POS_CAFE;Integrated Security=False;User ID=sa;Password=123;MultipleActiveResultSets=True
 SESSION_TIMEOUT=43200
