--- a/webapi/.env
+++ b/webapi/.env
@@ -1,3 +1,4 @@
 
-CONNECTION=Data Source=DESKTOP-AOK8US6\SQLEXPRESS;Initial Catalog=POS_CAFE;Integrated Security=False;User ID=sa;Password=123;MultipleActiveResultSets=True
+
+CONNECTION=Data Source=43.228.86.185;Initial Catalog=POS_CAFE;Integrated Security=False;User ID=sa;Password=123456s;MultipleActiveResultSets=True
 SESSION_TIMEOUT=43200
